unpackaged/objects/PLZ_Dental__c.object
<CustomObject>
  <description>Postal codes for Germany. Still used - March 2013</description>
  <fields>
    <fullName>AM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PLZ_Dental1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Area__c</fullName>
    <description>Area in der die PLZ liegt</description>
    <label>Area</label>
    <length>5</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>City_or_Country__c</fullName>
    <label>City or Countryside</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>35</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>GVL_Simplant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GVL Simplant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PLZ_Dental2</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>GVL_clinical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GVL clinical</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Postal_Code</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>GVL_digital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GVL digital</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Postal_Code3</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Gebiet_Simplant__c</fullName>
    <description>Gebiet (Simplant) in der die PLZ liegt</description>
    <label>Gebiet Simplant</label>
    <length>2</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Gebiet_clinical__c</fullName>
    <description>Gebiet (clinical) in der die PLZ liegt</description>
    <label>Gebiet clinical</label>
    <length>4</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Gebiet_digital__c</fullName>
    <description>Gebiet (digital) in der die PLZ liegt</description>
    <label>Gebiet digital</label>
    <length>2</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Movex_Gebiet__c</fullName>
    <description>Gibt die Movex Gebietsnummer der PLZ an</description>
    <inlineHelpText>Gebiet Movex (CRS610)</inlineHelpText>
    <label>Movex Gebiet</label>
    <length>3</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Movex_ID__c</fullName>
    <description>Gibt die Movex Verkäufer ID der PLZ an</description>
    <label>Movex ID</label>
    <length>4</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>RVL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RVL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PLZ_Dental</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Region__c</fullName>
    <description>Region in der die PLZ liegt</description>
    <label>Region</label>
    <length>2</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Telefon_AM__c</fullName>
    <label>Telefon AM</label>
    <type>Phone</type>
  </fields>
  <fields>
    <fullName>Telefon_GVL_Simplant__c</fullName>
    <label>Telefon GVL Simplant</label>
    <type>Phone</type>
  </fields>
  <fields>
    <fullName>Telefon_GVL_clinical__c</fullName>
    <label>Telefon GVL clinical</label>
    <type>Phone</type>
  </fields>
  <fields>
    <fullName>Telefon_GVL_digital__c</fullName>
    <label>Telefon GVL digital</label>
    <type>Phone</type>
  </fields>
  <fields>
    <fullName>Telefon_RVL__c</fullName>
    <label>Telefon RVL</label>
    <type>Phone</type>
  </fields>
  <fields>
    <fullName>Vertretung_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vertretung AM</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Vertretung_GVL_Simplant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vertretung GVL Simplant</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Vertretung_GVL_clinical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vertretung GVL clinical</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Vertretung_GVL_digital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vertretung GVL digital</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Vertretung_RVL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vertretung RVL</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Vertretung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vertretung</label>
    <type>Checkbox</type>
  </fields>
  <label>PLZ Dental</label>
  <listViews>
    <fullName>Alle</fullName>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
  </listViews>
  <nameField>
    <label>Postal Code-Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>PLZ Dental</pluralLabel>
  <sharingModel>Read</sharingModel>
</CustomObject>